# rc-gateway

./: .dockerignore  .gitignore  Dockerfile  ENHANCEMENTS.md  README.md  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt  update_tyler_extension.py
app/: __init__.py  main.py
app/api/: __init__.py  dependencies.py  enhanced_routes.py  routes.py
app/clients/: ringcentral.py
app/core/: __init__.py  cache.py  config.py  logging.py
app/middleware/: logging.py  metrics.py
app/schemas/: ivr.py  ringcentral.py  webhooks.py
app/services/: analytics.py  browser_auth.py  call_queues.py  departments.py  extensions.py  ivr.py  phone_numbers.py  sites.py  user_management.py  webhooks.py
config/: rc_credentials.json.template
tests/: conftest.py
tools/: rc_admin_tool.py  scim_provisioning.py
